--- a/package.json
+++ b/package.json
@@ -1,130 +1,72 @@
 {
-  "version": "0.0.1",
-  "main": ".webpack/main",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "tscheck": "tsc --noEmit --skipLibCheck",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
-  },
-  "author": {
-    "name": "Alex Harri Jónsson",
-    "email": "alexharri2919@gmail.com"
-  },
-  "license": "MIT",
-  "config": {
-    "forge": {
-      "packagerConfig": {
-        "name": "Animation Editor",
-        "icon": "files/app-icon.icns"
-      },
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "animation_editor"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ],
-      "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
-            "mainConfig": "./webpack.main.config.js",
-            "renderer": {
-              "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
-                  "name": "main_window",
-                  "preload": {
-                    "js": "./src/preload.ts"
-                  }
-                }
-              ]
-            }
-          }
-        ]
-      ]
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "tscheck": "tsc --noEmit --skipLibCheck",
+        "test": "jest",
+        "test:watch": "jest --watchAll"
+    },
+    "author": {
+        "name": "Alex Harri Jónsson",
+        "email": "alexharri2919@gmail.com"
+    },
+    "license": "MIT",
+    "dependencies": {
+        "@pixi/app": "^5.3.3",
+        "@pixi/unsafe-eval": "^5.3.10",
+        "@types/svg-parser": "^2.0.1",
+        "bezier-easing": "^2.1.0",
+        "bezier-js": "^4.0.3",
+        "css": "^3.0.0",
+        "emotion": "^10.0.27",
+        "kld-affine": "^2.1.1",
+        "kld-contours": "^0.3.2",
+        "lodash": "^4.17.21",
+        "mathjs": "^6.6.4",
+        "pixi.js": "^5.3.3",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-error-boundary": "^5.0.0",
+        "react-redux": "^7.1.3",
+        "redux": "^4.0.5",
+        "shortid": "^2.2.15",
+        "simplepolygon": "^1.2.3",
+        "svg-arc-to-cubic-bezier": "^3.2.0",
+        "svg-parser": "^2.0.4",
+        "svg-path-parser": "^1.1.0",
+        "svgpath": "^2.3.0",
+        "typesafe-actions": "^4.4.2",
+        "uuid": "^11.1.0"
+    },
+    "devDependencies": {
+        "@tsconfig/node18": "^18.2.4",
+        "@types/bezier-js": "^4.1.0",
+        "@types/css": "0.0.33",
+        "@types/jest": "^26.0.24",
+        "@types/lodash": "^4.17.16",
+        "@types/mathjs": "^6.0.5",
+        "@types/node": "^22.13.9",
+        "@types/react": "^17.0.14",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-redux": "^7.1.5",
+        "@types/redux-logger": "^3.0.7",
+        "@types/shortid": "0.0.29",
+        "@types/svg-path-parser": "^1.1.0",
+        "@types/uuid": "^7.0.2",
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^7.12.0",
+        "eslint-config-airbnb-typescript": "^12.0.0",
+        "eslint-config-prettier": "^6.14.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^24.1.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "typescript": "^4.3.5",
+        "vite": "^6.2.0"
     }
-  },
-  "dependencies": {
-    "@pixi/app": "^5.3.3",
-    "@pixi/unsafe-eval": "^5.3.10",
-    "@types/svg-parser": "^2.0.1",
-    "bezier-easing": "^2.1.0",
-    "bezier-js": "^4.0.3",
-    "css": "^3.0.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "emotion": "^10.0.27",
-    "kld-affine": "^2.1.1",
-    "kld-contours": "^0.3.2",
-    "mathjs": "^6.6.4",
-    "pixi.js": "^5.3.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.5",
-    "shortid": "^2.2.15",
-    "simplepolygon": "^1.2.3",
-    "svg-arc-to-cubic-bezier": "^3.2.0",
-    "svg-parser": "^2.0.4",
-    "svg-path-parser": "^1.1.0",
-    "svgpath": "^2.3.0",
-    "typesafe-actions": "^4.4.2"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.58",
-    "@electron-forge/maker-deb": "^6.0.0-beta.58",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.58",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.58",
-    "@electron-forge/maker-zip": "^6.0.0-beta.58",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.58",
-    "@types/bezier-js": "^4.1.0",
-    "@types/css": "0.0.33",
-    "@types/jest": "^26.0.24",
-    "@types/mathjs": "^6.0.5",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.5",
-    "@types/redux-logger": "^3.0.7",
-    "@types/shortid": "0.0.29",
-    "@types/svg-path-parser": "^1.1.0",
-    "@types/uuid": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@vercel/webpack-asset-relocator-loader": "1.6.0",
-    "copy-webpack-plugin": "^5.1.2",
-    "electron": "13.3.0",
-    "eslint": "^7.12.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.0.1",
-    "node-loader": "^2.0.0",
-    "ts-loader": "^9.2.2",
-    "typescript": "^4.3.5"
-  }
 }
