--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@pixi/app": "^5.3.3",
         "@pixi/unsafe-eval": "^5.3.10",
+        "@reduxjs/toolkit": "^2.6.0",
         "@types/svg-parser": "^2.0.1",
         "bezier-easing": "^2.1.0",
         "bezier-js": "^4.0.3",
@@ -30,14 +31,13 @@
         "react-dom": "^16.12.0",
         "react-error-boundary": "^5.0.0",
         "react-redux": "^7.1.3",
-        "redux": "^4.0.5",
+        "redux-undo": "^1.1.0",
         "shortid": "^2.2.15",
         "simplepolygon": "^1.2.3",
         "svg-arc-to-cubic-bezier": "^3.2.0",
         "svg-parser": "^2.0.4",
         "svg-path-parser": "^1.1.0",
         "svgpath": "^2.3.0",
-        "typesafe-actions": "^4.4.2",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
