--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-dom": "^16.12.0",
         "react-error-boundary": "^5.0.0",
         "react-redux": "^7.1.3",
+        "redux": "^4.0.5",
         "redux-undo": "^1.1.0",
         "shortid": "^2.2.15",
         "simplepolygon": "^1.2.3",
@@ -38,6 +39,7 @@
         "svg-parser": "^2.0.4",
         "svg-path-parser": "^1.1.0",
         "svgpath": "^2.3.0",
+        "typesafe-actions": "^4.4.2",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
